day-4/demo-loadbalancer/k8s_manifest/deployment_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: alb-api-svc
spec:
  selector:
    app: alb-api 
  ports:
    - protocol: TCP
      port: 80  
      targetPort: 8000 
  type: ClusterIP
