day-4/demo-loadbalancer/k8s_manifest/ingress_svc.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alb-api-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing 
    alb.ingress.kubernetes.io/target-type: ip 
spec:
  rules:
    - http:
        paths:
          - path: /hello
            pathType: Prefix
            backend:
              service:
                name: alb-api-svc
                port:
                  number: 80
